--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "d3ce8812-9567-47e9-a7b5-65a6d70a3065"
 authors = ["Matthew Fishman <mfishman@flatironinstitute.org> and contributors"]
 version = "0.1.0"
 
+[deps]
+Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
+
 [compat]
 julia = "1"
 
